--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <h1>Maplestory Node Solver</h1>
-<p class="title">Made by: Mysty <br>
-Preface: I'm learning html, css, and javascript dont expect a good ui</p>
+<p class="title">Made by: Mysty</p>
 <body>
     <ul>
         <li>
