--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p><label for="optimal">Step 1:<br>
                 To begin first input the names of your nodes seperated by a comma like the example below.
                 </label></p>
-                <textarea id="optimal" rows="8" cols="50">fan,ghost,vortex,ground,clone,iron fan</textarea>
+                <textarea id="optimal" rows="8" cols="50"></textarea>
                 <br>
             </form>
         </li>
@@ -27,20 +27,7 @@
                 <p><label for="trio">Step 2:<br>
                 Next input your trios into the text box below. Seperate the parts by a comma and the node as a whole with a new line. There is an example below.
                 </label></p>
-                <textarea id="trio" rows="8" cols="50">Fan, Ghost, Vortex
-Fan, Ground, Ghost
-Fan, Clone, Vortex
-Ground, Iron Fan, Fan
-Ground, Clone, Ghost
-Ground, Ghost, Iron Fan
-Ghost, Fan, Vortex
-Ghost, Vortex, Fan
-Vortex, Ghost, Clone
-Vortex, Iron Fan, Fan
-Vortex, Fan, Iron Fan
-Vortex, Fan, Ghost
-Clone, Ghost, Ground
-Clone, Vortex, Ghost</textarea>
+                <textarea id="trio" rows="8" cols="50"></textarea>
                 <br>
             </form>
         </li>
