--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <h1>Maplestory Node Solver</h1>
 <p class="title">Made by: Mysty</p>
 <p class="title"> <a href="https://www.youtube.com/watch?v=_bAR37VUxg0">Demo</a></p>
+<p class="title"> <a href="./reference/NodeGuide.html">Node Guide</a></p>
 <body>
     <ul>
         <li>
