--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <h1>Maplestory Node Solver</h1>
-<p class="title">Made by: Mysty</p>
+<p class="title">Made by: mastermysty</p>
 <p class="title"> <a href="https://www.youtube.com/watch?v=_bAR37VUxg0">Demo</a></p>
 <p class="title"> <a href="./reference/NodeGuide.html">Node Guide</a></p>
 <body>
