half node support

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                 <br>
             </form>
         </li>
+        <li>
+            <form id="halfsies">
+                <p><label for="half">Step 3 (optional):<br>
+                EXPERIMENTAL: early phases of this. Half boosts are very limited. They are only allowed if you already have 1 free space after filling in mandatory nodes put in "STEP 1".<br>
+                This is an optional parameter so it does not need to be filled. (Realistically you only need 1 half boost).
+                </label></p>
+                <textarea id="half" rows="8" cols="50"></textarea>
+                <br>
+            </form>
+        </li>
     </ul>
     
     <section>
