functions complete for image solver

--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -5,9 +5,11 @@
 <title>Hello OpenCV.js</title>
 </head>
 <body>
-<img id="myimg" hidden src="./template.png">
-<h2>Hello OpenCV.js</h2>
-<p id="status">OpenCV.js is loading...</p>
+<img id="template" hidden src="./template.png">
+<select id="classes">
+</select>
+<ul id="imgL">
+</ul>
 <div>
  <div class="inputoutput">
  <img id="imageSrc" alt="No Image" />
@@ -19,25 +21,166 @@
  </div>
 </div>
 <script type="text/javascript">
+function inside(x,y){
+    for(let i = 0; i<y.length;i++){
+        if(x==y[i]){
+            return true
+        }
+    }
+    return false
+}
+function sumRegion(im1,im2,start,region){
+    let R = 0
+    let G = 0
+    let B = 0
+    let total = 0
+    if(region == 1){
+        // 16-29, 2-15
+        // square
+        for (let j = 0; j<14;j++){
+            for (let i = j; i<27;i++){
+                let pixel1 = im1.charPtr(start[0]+i+3,start[1]+j+2)
+                let pixel2 = im2.charPtr(i+3,j+2)
+                R+=Math.pow(pixel1[0]/255-pixel2[0]/255,2)
+                G+=Math.pow(pixel1[1]/255-pixel2[1]/255,2)
+                B+=Math.pow(pixel1[2]/255-pixel2[2]/255,2)
+                total+=1
+                // im2[i+3,j+2] = np.array([255,0,0])
+            }  
+        }
+    }
+    else if(region == 2){
+        // i = 0-14
+        // j = i-32-i-3
+        for (let i = 0; i<14; i++){
+            for (let j = i+3;j<32-i-2;j++){
+                let pixel1 = im1.charPtr(start[0]+i+2,start[1]+j)
+                let pixel2 = im2.charPtr(i+2,j)
+                R+=Math.pow(pixel1[0]/255-pixel2[0]/255,2)
+                G+=Math.pow(pixel1[1]/255-pixel2[1]/255,2)
+                B+=Math.pow(pixel1[2]/255-pixel2[2]/255,2)
+                total+=1
+                // im2[i+2,j] = np.array([0,255,0])
+            } 
+        } 
+    }
+    else{
+        for (let j = 0; j<13;j++){
+            for(let i = 16-j; i<30;i++){
+                let pixel1 = im1.charPtr(start[0]+i,start[1]+j+17)
+                let pixel2 = im2.charPtr(i,j+17)
+                R+=Math.pow(pixel1[0]/255-pixel2[0]/255,2)
+                G+=Math.pow(pixel1[1]/255-pixel2[1]/255,2)
+                B+=Math.pow(pixel1[2]/255-pixel2[2]/255,2)
+                total+=1
+                // im2[i,j+17] = np.array([0,0,255])
+            } 
+        }
+    }
+    return (R+G+B)/(total*3)
+}
+function identify(img,loc,img_lib,region){
+    let choices = []
+    for (let i = 0; i<img_lib.length;i++){
+        choices.push(0) 
+        choices[i] = sumRegion(img,img_lib[i],loc,region)
+    }
+    console.log(choices)
+    console.log(Math.min(...choices))
+    if (Math.min(...choices) < 0.1){
+        return choices.indexOf(Math.min(...choices))
+    }
+    return -1
+}
+    
+function trioFinder(img_rgb, template, reqSkills){
+    // setup
+    let threshold = 0.5;
+    let src = cv.imread(img_rgb);
+    let templ = cv.imread(template);
+    // containers
+    let source = new cv.Mat();
+    let dst = new cv.Mat();
+    let template1 = new cv.Mat();
+    let mask = new cv.Mat();
+    cv.cvtColor(src, source, cv.COLOR_RGBA2GRAY, 1);
+    cv.cvtColor(templ, template1, cv.COLOR_RGBA2GRAY, 1);
+    cv.matchTemplate(source, template1, dst, cv.TM_CCOEFF_NORMED, mask);
+    templ.delete();
+    template1.delete();
+    mask.delete();
+    // dst, source and src are the last ones left
+    let coords = []
+    for(let i = 0; i<dst.rows;i++){
+        for(let j = 0; j<dst.cols;j++){
+            let pixel = dst.floatPtr(i, j);
+            if(pixel[0] >=0.5){
+                coords.push([i,j])
+            }  
+        }
+    }
+    // clean the coordinates
+    skip = []
+    clean = []
+    for(let i = 0; i<coords.length;i++){
+        dont = false
+        if(inside(i,skip)){
+            continue;
+        }
+        for(let j = i+1; j<coords.length;j++){
+            // console.log(j,i,coords[i],coords[j],"distance=",(Math.abs(coords[i][0]-coords[j][0])+Math.abs(coords[i][1]-coords[j][1])))
+            if ((Math.abs(coords[i][0]-coords[j][0])+Math.abs(coords[i][1]-coords[j][1]))<15){
+                let pixel = dst.floatPtr(i, j);
+                if(dst.floatPtr(coords[i][0],coords[i][1])[0]>=dst.floatPtr(coords[j][0],coords[j][1])[0]){
+                    skip.push(j)
+                }
+                else if(dst.floatPtr(coords[i][0],coords[i][1])[0]<dst.floatPtr(coords[j][0],coords[j][1])[0]){
+                    dont = True
+                    break;
+                }
+            }
+        }
+        if (!dont){
+            clean.push(coords[i])
+        } 
+    }
+    // console.log(clean)
+    let count = []
+    // create nodes
+    for(let pt = 0; pt<clean.length;pt++){
+        // print(pt1)
+        main = identify(src,clean[pt],reqSkills,1)
+        up = identify(src,clean[pt],reqSkills,2)
+        last = identify(src,clean[pt],reqSkills,3)
+        console.log([main,up,last])
+        if (main !=-1 && top !=-1 && last !=-1){
+            count.push([main.toString(),up.toString(),last.toString()])
+        }
+    }
+    dst.delete()
+    source.delete()
+    src.delete()
+    return count 
+}
 let imgElement = document.getElementById('imageSrc');
 let inputElement = document.getElementById('fileInput');
 inputElement.addEventListener('change', (e) => {
  imgElement.src = URL.createObjectURL(e.target.files[0]);
- console.log( URL.createObjectURL(e.target.files[0]))
 }, false);
 imgElement.onload = function() {
- let mat = cv.imread(myimg);
- console.log(mat)
- cv.imshow('canvasOutput', mat);
- mat.delete();
-};
-var Module = {
- // https://emscripten.org/docs/api_reference/module.html#Module.onRuntimeInitialized
- onRuntimeInitialized() {
- document.getElementById('status').innerHTML = 'OpenCV.js is ready.';
- }
+    nodelib = document.getElementsByClassName("nodeLib")
+    console.log(nodelib)
+    img_library =[] 
+    for(let i = 0;i<nodelib.length;i++){
+        img_library.push(cv.imread(nodelib[i]))
+    }
+
+    console.log(trioFinder(imgElement,'template',img_library))
+    // cv.imshow('canvasOutput',img_library[2])
+
 };
 </script>
 <script async src="opencv.js" type="text/javascript"></script>
+<script src="imageSolver.js" type="text/javascript"></script>
 </body>
 </html>
