functions complete for image solver

--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -162,6 +162,7 @@ function trioFinder(img_rgb, template, reqSkills){
     src.delete()
     return count 
 }
+let selection = []
 let imgElement = document.getElementById('imageSrc');
 let inputElement = document.getElementById('fileInput');
 inputElement.addEventListener('change', (e) => {
