--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -163,6 +163,7 @@ inputElement.addEventListener('change', (e) => {
 }, false);
 function calculate() {
     nodelib = document.getElementsByClassName("nodeLib")
+    viewing.innerHTML = ''
     let img_library =[] 
     let req = []
     let nodes = []
