--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -78,7 +78,7 @@ function identify(img,loc,img_lib,region){
         choices.push(0) 
         choices[i] = sumRegion(img,img_lib[i],loc,region)
     }
-    if (Math.min(...choices) < 0.1){
+    if (Math.min(...choices) < 0.2){
         return choices.indexOf(Math.min(...choices))
     }
     return -1
@@ -86,7 +86,7 @@ function identify(img,loc,img_lib,region){
     
 function trioFinder(img_rgb, template, reqSkills){
     // setup
-    let threshold = 0.5;
+    let threshold = 0.3;
     let src = cv.imread(img_rgb);
     let templ = cv.imread(template);
     // containers
@@ -105,7 +105,7 @@ function trioFinder(img_rgb, template, reqSkills){
     for(let i = 0; i<dst.rows;i++){
         for(let j = 0; j<dst.cols;j++){
             let pixel = dst.floatPtr(i, j);
-            if(pixel[0] >=0.5){
+            if(pixel[0] >=threshold){
                 coords.push([i,j])
             }  
         }
@@ -119,7 +119,7 @@ function trioFinder(img_rgb, template, reqSkills){
             continue;
         }
         for(let j = i+1; j<coords.length;j++){
-            if ((Math.abs(coords[i][0]-coords[j][0])+Math.abs(coords[i][1]-coords[j][1]))<15){
+            if ((Math.abs(coords[i][0]-coords[j][0])+Math.abs(coords[i][1]-coords[j][1]))<64){
                 let pixel = dst.floatPtr(i, j);
                 if(dst.floatPtr(coords[i][0],coords[i][1])[0]>=dst.floatPtr(coords[j][0],coords[j][1])[0]){
                     skip.push(j)
@@ -135,6 +135,7 @@ function trioFinder(img_rgb, template, reqSkills){
         } 
     }
     let count = []
+    console.log(clean)
     // create nodes
     for(let pt = 0; pt<clean.length;pt++){
         // print(pt1)
@@ -184,6 +185,7 @@ function calculate() {
     for(let i = 0; i<readimgs.length;i++){
         nodes = [...nodes,...trioFinder(readimgs[i],'template',img_library)]
     }
+    console.log(nodes)
     trios = main1(nodes,req,half)
     let fileList = file[clas]
     if(trios =="impossible"){
