--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -6,6 +6,7 @@
 <title>Mysty's Image Solver</title>
 </head>
 <body>
+<p class="title"> <a href="https://www.youtube.com/watch?v=YO5fkfG3Gv4">Demo</a></p>
 <img id="template" hidden src="./template.png">
 <select id="classes">
 </select>
