--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -6,7 +6,11 @@
 <title>Mysty's Image Solver</title>
 </head>
 <body>
+<h1>Maplestory Node Solver</h1>
+<p class="title">Made by: mastermysty</p>
 <p class="title"> <a href="https://www.youtube.com/watch?v=YO5fkfG3Gv4">Demo</a></p>
+<p class="title"> <a href="../reference/NodeGuide.html">Node Guide</a></p>
+<p class="title"> <a href="../index.html">Text Based Node Guide(old)</a></p>
 <img id="template" hidden src="./template.png">
 <select id="classes">
 </select>
