--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <h1>Maplestory Node Solver</h1>
 <p class="title">Made by: mastermysty</p>
+<p class="title"> <a href="./imageSolver/imageSolver.html">Better Node Solver</a></p>
 <p class="title"> <a href="https://www.youtube.com/watch?v=_bAR37VUxg0">Demo</a></p>
 <p class="title"> <a href="./reference/NodeGuide.html">Node Guide</a></p>
+
 <body>
     <ul>
         <li>
