--- a/imageSolver/imageSolver.html
+++ b/imageSolver/imageSolver.html
@@ -120,27 +120,42 @@ function deleteImgs(){
     last.innerHTML=""
     readimgs = []
 }
-function trioFinder(img_rgb, template, reqSkills){
+function trioFinder(img_rgb, template,templateLock, reqSkills){
     // setup
     let threshold = 0.3;
     let src = cv.imread(img_rgb);
     let templ = cv.imread(template);
+    let templLock = cv.imread(templateLock);
     // containers
     let source = new cv.Mat();
     let dst = new cv.Mat();
+    let dstLock = new cv.Mat();
     let template1 = new cv.Mat();
+    let template2 = new cv.Mat();
     let mask = new cv.Mat();
     cv.cvtColor(src, source, cv.COLOR_RGBA2GRAY, 1);
     cv.cvtColor(templ, template1, cv.COLOR_RGBA2GRAY, 1);
+    cv.cvtColor(templLock, template2, cv.COLOR_RGBA2GRAY, 1);
     cv.matchTemplate(source, template1, dst, cv.TM_CCOEFF_NORMED, mask);
+    cv.matchTemplate(source, template2, dstLock, cv.TM_CCOEFF_NORMED, mask);
     templ.delete();
+    templLock.delete();
     template1.delete();
+    template2.delete();
     mask.delete();
     // dst, source and src are the last ones left
     let coords = []
     for(let i = 0; i<dst.rows;i++){
         for(let j = 0; j<dst.cols;j++){
             let pixel = dst.floatPtr(i, j);
+            if(pixel[0] >=threshold){
+                coords.push([i,j])
+            }  
+        }
+    }
+    for(let i = 0; i<dstLock.rows;i++){
+        for(let j = 0; j<dstLock.cols;j++){
+            let pixel = dstLock.floatPtr(i, j);
             if(pixel[0] >=threshold){
                 coords.push([i,j])
             }  
@@ -171,7 +186,7 @@ function trioFinder(img_rgb, template, reqSkills){
             clean.push(coords[i])
         } 
     }
-    
+    console.log(clean)
     let count = []
     // create nodes
     for(let pt = 0; pt<clean.length;pt++){
@@ -187,6 +202,7 @@ function trioFinder(img_rgb, template, reqSkills){
         }
     }
     dst.delete()
+    dstLock.delete()
     source.delete()
     src.delete()
     return count 
@@ -252,7 +268,7 @@ function calculate(tabs) {
         }
     }
     for(let i = 0; i<readimgs.length;i++){
-        nodes = [...nodes,...trioFinder(readimgs[i],'template',img_library)]
+        nodes = [...nodes,...trioFinder(readimgs[i],'template','template1',img_library)]
     }
     let fileList = file[clas]
     if(tabs){
